--- a/configs/config.cfg
+++ b/configs/config.cfg
@@ -2,7 +2,7 @@
 n_samples=20000
 n_tasks=20
 n_trials=20
-n_batch=32
+n_batch=64
 
 [TASK]
 maze=[
@@ -23,16 +23,21 @@ maze=[
 [AGENT]
 gamma=0.95
 epsilon=0.55
+# epsilon=0.15
 T=200
 print_ev=2000
 save_ev=200
 encoding=None
 
 [SFQL]
-learning_rate=0.005
-learning_rate_w=0.005
+learning_rate=0.001
+learning_rate_w=0.5
 use_true_reward=False
 hidden_units=128
 
 [QL]
-learning_rate=0.005
+learning_rate=0.5
+
+[FGSF]
+n_averaging=1
+task_sampling=sequential
