--- a/configs/config.cfg
+++ b/configs/config.cfg
@@ -3,6 +3,7 @@ n_samples=20000
 n_tasks=20
 n_trials=20
 n_batch=64
+buffer_size=200000
 
 [TASK]
 maze=[
@@ -23,7 +24,6 @@ maze=[
 [AGENT]
 gamma=0.95
 epsilon=0.55
-# epsilon=0.15
 T=200
 print_ev=2000
 save_ev=200
@@ -39,5 +39,5 @@ hidden_units=128
 learning_rate=0.5
 
 [FGSF]
-n_averaging=1
-task_sampling=sequential
+n_averaging=5
+algorithm=alg3
