--- a/configs/reacher.cfg
+++ b/configs/reacher.cfg
@@ -1,9 +1,9 @@
 [GENERAL]
 n_samples=20000
 n_tasks=20
-n_trials=1
-n_batch=512
-buffer_size=200000
+n_trials=20
+n_batch=32
+buffer_size=1000000
 
 [TASK]
 train_targets=[(0.14, 0.0), (-0.14, 0.0), (0.0, 0.14), (0.0, -0.14)]
@@ -11,8 +11,8 @@ test_targets=[(0.22, 0.0), (-0.22, 0.0), (0.0, 0.22), (0.0, -0.22), (0.1, 0.1), 
 
 
 [AGENT]
-gamma=0.95
-epsilon=0.60
+gamma=0.9
+epsilon=0.1
 T=500
 print_ev=1000
 save_ev=200
@@ -21,8 +21,7 @@ encoding='task'
 [SFQL]
 learning_rate=0.001
 learning_rate_w=0.5
-learning_rate_prior=0.00001
-use_true_reward=False
+use_true_reward=True
 hidden_units=128
 
 [QL]
@@ -32,7 +31,6 @@ learning_rate=0.001
 n_averaging=5
 algorithm=alg3
 learning_rate=0.001
-learning_rate_prior=0.00001
 learning_rate_w=0.5
-use_true_reward=False
+use_true_reward=True
 hidden_units=128
